--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "build-css": "tailwindcss build src/styles.css -o Views/styles.css"
   },
   "keywords": [],
   "author": "",
