--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.6"
