--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@babel/node": "^7.20.7",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
+    "connect-mongo": "^4.6.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.6"
