--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "devStart": "nodemon server.js",
-    "build-css": "tailwindcss build src/styles.css -o Views/styles.css"
+    "build-css": "tailwindcss build -i src/styles.css -o Views/output.css"
   },
   "keywords": [],
   "author": "",
@@ -19,12 +19,19 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "markdown-it": "^13.0.1",
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.20",
+    "openid-client": "^5.4.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.6.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.2.6"
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
