--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "markdown-it": "^13.0.1",
+    "marked": "^4.2.12",
     "mongoose": "^6.9.1",
     "nodemon": "^2.0.20",
     "openid-client": "^5.4.0",
