--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
     "connect-mongo": "^4.6.0",
+    "dompurify": "^3.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "front-matter": "^4.0.2",
     "gray-matter": "^4.0.3",
+    "jsdom": "^21.1.0",
     "markdown-it": "^13.0.1",
     "markdown-it-meta": "^0.0.1",
     "marked": "^4.2.12",
