--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "gray-matter": "^4.0.3",
+    "helmet": "^6.0.1",
     "jsdom": "^21.1.0",
     "markdown-it": "^13.0.1",
     "marked": "^4.2.12",
