--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.6.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "share-buttons": "^1.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
