--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js",
+    "devStart": "nodemon server.min.js",
     "build-css": "tailwindcss build -i src/styles.css -o Views/output.css"
   },
   "keywords": [],
