--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.6.1",
+    "purgecss": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "share-buttons": "^1.9.0"
