--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "share-buttons": "^1.9.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.35.0",
     "postcss": "^8.4.21",
